# tdjson-rs

./: Cargo.toml  LICENSE  README.md
examples/: bot.rs
src/: error.rs  lib.rs
src/client/: LICENSE-MIT  iter.rs  mod.rs  receive.rs  safe.rs  send.rs  typed.rs  unsafe_.rs  untyped.rs
